--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,18 @@
 
 export(all_table_ontology_columns_to_vmr_ids)
 export(amatch_term)
+export(check_for_existing_geo_loc_site)
 export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
 export(get_mapping_for_one_col)
+export(insert_alternative_isolate_ids)
 export(insert_collection_information)
 export(insert_geo_loc)
 export(insert_into_multi_choice_table)
 export(lookup_table_terms)
 export(multi_choice_tables)
 export(rename_grdi_cols_to_vmr)
+export(return_or_insert_contact_information)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
+export(transform_and_insert_multi_choice_column)
