--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    tidyverse
-    stringdist
+    tidyverse <= 2.0.0
+    stringdist <= 0.9.12
