Adds function to set vmr_isolate_ids from list of possibles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ export(rename_grdi_cols_to_vmr)
 export(return_or_insert_contact_information)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
+export(set_vmr_isolate_id_from_alternates)
 export(transform_and_insert_multi_choice_column)
