--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,18 @@ export(check_for_existing_geo_loc_site)
 export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
 export(get_mapping_for_one_col)
+export(get_sample_ids)
 export(insert_alternative_isolate_ids)
+export(insert_alternative_sample_ids)
 export(insert_collection_information)
 export(insert_geo_loc)
 export(insert_into_multi_choice_table)
 export(lookup_table_terms)
 export(multi_choice_tables)
+export(new_project)
+export(new_samples)
 export(rename_grdi_cols_to_vmr)
 export(return_or_insert_contact_information)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
 export(set_vmr_isolate_id_from_alternates)
-export(transform_and_insert_multi_choice_column)
