updates documentation and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,20 @@ export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
 export(get_mapping_for_one_col)
 export(get_sample_ids)
+export(host_organisms_to_ids)
 export(insert_alternative_isolate_ids)
 export(insert_alternative_sample_ids)
+export(insert_anatomical_data)
+export(insert_anatomical_multi_choices)
 export(insert_collection_information)
+export(insert_env_data)
+export(insert_env_multi_choices)
+export(insert_food_data)
 export(insert_geo_loc)
+export(insert_host_data)
 export(insert_into_multi_choice_table)
+export(insert_isolate_data)
+export(insert_or_return_geo_site)
 export(lookup_table_terms)
 export(multi_choice_tables)
 export(new_project)
