--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,8 +25,10 @@ export(lookup_table_terms)
 export(multi_choice_tables)
 export(new_project)
 export(new_samples)
+export(open_sheet)
 export(rename_grdi_cols_to_vmr)
 export(return_or_insert_contact_information)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
 export(set_vmr_isolate_id_from_alternates)
+export(tally_values_to_string)
