Adds new function for reporting tallies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,9 +26,9 @@ export(multi_choice_tables)
 export(new_project)
 export(new_samples)
 export(open_sheet)
+export(print_tallies_of_columns)
 export(rename_grdi_cols_to_vmr)
 export(return_or_insert_contact_information)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
 export(set_vmr_isolate_id_from_alternates)
-export(tally_values_to_string)
