--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,14 @@ export(new_samples)
 export(open_sheet)
 export(print_tallies_of_columns)
 export(rename_grdi_cols_to_vmr)
+export(repIns_ana)
+export(repIns_collection_info)
+export(repIns_env)
+export(repIns_food_data)
+export(repIns_geo_data)
+export(repIns_host)
+export(repIns_project)
+export(report_and_insert_projects_samples_metadata)
 export(return_or_insert_contact_information)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
