--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
 export(get_mapping_for_one_col)
 export(get_sample_ids)
+export(grdi_excel_to_sample_metadata_df)
 export(host_organisms_to_ids)
 export(insert_alternative_isolate_ids)
 export(insert_alternative_sample_ids)
@@ -37,6 +38,8 @@ export(repIns_host)
 export(repIns_project)
 export(report_and_insert_projects_samples_metadata)
 export(return_or_insert_contact_information)
+export(samples_by_group)
+export(save_report_to_excel_workbook)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
 export(set_vmr_isolate_id_from_alternates)
