--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(all_table_ontology_columns_to_vmr_ids)
 export(amatch_term)
+export(amr_regexes)
 export(check_for_existing_geo_loc_site)
 export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
