--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,14 @@ export(add_braces_to_ontology_terms)
 export(all_table_ontology_columns_to_vmr_ids)
 export(amatch_term)
 export(amr_regexes)
+export(append_ncbi_taxon_ontology_to_microbes)
 export(check_for_existing_geo_loc_site)
 export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
 export(get_mapping_for_one_col)
 export(get_sample_ids)
 export(grdi_excel_to_sample_metadata_df)
+export(grep_ont_term)
 export(host_organisms_to_ids)
 export(insert_alternative_isolate_ids)
 export(insert_alternative_sample_ids)
