--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,13 @@ export(insert_host_data)
 export(insert_into_multi_choice_table)
 export(insert_isolate_data)
 export(insert_or_return_geo_site)
+export(insert_wgs_ext)
 export(lookup_table_terms)
 export(multi_choice_tables)
+export(new_extraction)
 export(new_project)
 export(new_samples)
+export(new_sequence)
 export(open_sheet)
 export(print_tallies_of_columns)
 export(rename_grdi_cols_to_vmr)
