Adds funcs to update VMR with sequence info directly from IRIDA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_braces_to_ontology_terms)
 export(all_table_ontology_columns_to_vmr_ids)
 export(amatch_term)
 export(amr_regexes)
+export(associate_irida_seqs_with_vmr_isolates)
 export(check_for_existing_geo_loc_site)
 export(convert_GRDI_ont_to_vmr_ids)
 export(extract_ont_id)
@@ -49,3 +50,4 @@ export(save_report_to_excel_workbook)
 export(select_vmr_fields)
 export(seperate_column_into_longform)
 export(set_vmr_isolate_id_from_alternates)
+export(update_sequences_with_irida)
