--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,12 @@ export(grep_ont_term)
 export(host_organisms_to_ids)
 export(insert_alternative_isolate_ids)
 export(insert_alternative_sample_ids)
+export(insert_into_multi_choice_table)
 export(insert_isolate_data)
 export(insert_sample_metadata)
-export(insert_wgs_ext)
+export(insert_wgs_seq)
 export(lookup_table_terms)
+export(make_blank_df)
 export(new_extraction)
 export(new_project)
 export(new_sequence)
