--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(new_project)
 export(new_sequence)
 export(open_sheet)
 export(print_tallies_of_columns)
+export(query_pairs_from_irida)
 export(repIns_ana)
 export(repIns_collection_info)
 export(repIns_env)
