--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,12 @@ export(grep_ont_term)
 export(host_organisms_to_ids)
 export(insert_alternative_isolate_ids)
 export(insert_alternative_sample_ids)
+export(insert_amr_from_wide_form_template)
 export(insert_into_multi_choice_table)
 export(insert_isolate_data)
 export(insert_sample_metadata)
 export(insert_wgs_seq)
+export(long_form_antibiotics)
 export(lookup_table_terms)
 export(make_blank_df)
 export(new_extraction)
