updates docs and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(new_sequence)
 export(open_sheet)
 export(print_tallies_of_columns)
 export(query_pairs_from_irida)
+export(read_template_from_excel)
 export(repIns_ana)
 export(repIns_collection_info)
 export(repIns_env)
