--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(insert_alternative_sample_ids)
 export(insert_amr_from_wide_form_template)
 export(insert_into_multi_choice_table)
 export(insert_isolate_data)
+export(insert_mtg_seq)
 export(insert_sample_metadata)
 export(insert_wgs_seq)
 export(long_form_antibiotics)
