updates docs and exports and incs ver

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_sample_ids)
 export(grdi_excel_to_sample_metadata_df)
 export(grep_ont_term)
 export(host_organisms_to_ids)
+export(import_and_insert_sensititre)
 export(insert_alternative_isolate_ids)
 export(insert_alternative_sample_ids)
 export(insert_amr_from_wide_form_template)
